--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -107,35 +107,35 @@
                             {{ form.hidden_tag() }}
                             <div class="control-group">
                                 <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                                    <label>Name</label><input class="form-control" id="name" type="text" placeholder="Name" 
-                                    name="name" required="required" data-validation-required-message="Please enter your name." />
+                                    <label>{{ _("Prénom de l'enfant") }}</label><input class="form-control" id="nickname" type="text" placeholder="Anna" 
+                                    name="nickname" required="required" data-validation-required-message="Please enter your name." />
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
                             <div class="control-group">
                                 <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                                    <label>Email Address</label><input class="form-control" id="email" type="email" placeholder="Email Address" 
-                                    name="email" required="required" data-validation-required-message="Please enter your email address." />
+                                    <label>{{ _('Fille/Garçon') }}</label><input class="form-control" id="gender" type="text" placeholder="Fille" 
+                                    name="gender" required="required" data-validation-required-message="Please enter your name." />
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
                             <div class="control-group">
                                 <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                                    <label>Phone Number</label><input class="form-control" id="phone" type="tel" placeholder="Phone Number"
-                                    name="phone" required="required" data-validation-required-message="Please enter your phone number." />
+                                    <label>{{ _("Lieu où l'histoire se déroule") }}</label><input class="form-control" id="location" type="text" placeholder="Dinant" 
+                                    name="location" required="required" data-validation-required-message="Please enter your name." />
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
                             <div class="control-group">
                                 <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                                    <label>Message</label><textarea class="form-control" id="message" rows="5" placeholder="Message" 
-                                        name="message" required="required" data-validation-required-message="Please enter a message."></textarea>
+                                    <label>{{ _('Message') }}</label><textarea class="form-control" id="body" rows="5" placeholder="A ma chère Anna, bonne lecture!" 
+                                        name="body" required="required" data-validation-required-message="Please enter a message."></textarea>
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
                             <br />
                             <div id="success"></div>
-                            <div class="form-group"><button class="btn btn-primary btn-xl" id="sendMessageButton" type="submit">Send</button></div>
+                            <div class="form-group"><button class="btn btn-primary btn-xl" id="sendMessageButton" type="submit">{{ _('Commander') }}</button></div>
                         </form>
                     </div>
                 </div>
