--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -107,28 +107,32 @@
                             {{ form.hidden_tag() }}
                             <div class="control-group">
                                 <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                                    <label>{{ _("Prénom de l'enfant") }}</label><input class="form-control" id="nickname" type="text" placeholder="Anna" 
+                                    <label>{{ _("Prénom de l'enfant") }}</label><input class="form-control" id="nickname" type="text" 
+                                    placeholder="Prénom de l'enfant (par exemple, 'Anna')" 
                                     name="nickname" required="required" data-validation-required-message="Please enter your name." />
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
                             <div class="control-group">
                                 <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                                    <label>{{ _('Fille/Garçon') }}</label><input class="form-control" id="gender" type="text" placeholder="Fille" 
+                                    <label>{{ _('fille/garçon') }}</label><input class="form-control" id="gender" type="text"
+                                    placeholder="Fille/Garçon (par exemple, 'Garçon')" 
                                     name="gender" required="required" data-validation-required-message="Please enter your name." />
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
                             <div class="control-group">
                                 <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                                    <label>{{ _("Lieu où l'histoire se déroule") }}</label><input class="form-control" id="location" type="text" placeholder="Dinant" 
+                                    <label>{{ _("Lieu où l'histoire se déroule") }}</label><input class="form-control" id="location" type="text" 
+                                    placeholder="Lieu où l'histoire se déroule (par exemple, 'Dinant')" 
                                     name="location" required="required" data-validation-required-message="Please enter your name." />
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
                             <div class="control-group">
                                 <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                                    <label>{{ _('Message') }}</label><textarea class="form-control" id="body" rows="5" placeholder="A ma chère Anna, bonne lecture!" 
+                                    <label>{{ _("Message à l'ouverture du livre") }}</label><textarea class="form-control" id="body" rows="5" 
+                                        placeholder="Message (par exemple, 'A ma chère Anna, bonne lecture!')"
                                         name="body" required="required" data-validation-required-message="Please enter a message."></textarea>
                                     <p class="help-block text-danger"></p>
                                 </div>
