--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -49,7 +49,7 @@
         <section class="page-section portfolio" id="portfolio">
             <div class="container">
                 <!-- Portfolio Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Portfolio</h2>
+                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">{{ _('Etape 1 : Découvrir') }}</h2>
                 <!-- Icon Divider-->
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
@@ -89,10 +89,11 @@
             </div>
         </section>
         <!-- Contact Section-->
+        <form id="contactForm" name="sentMessage" novalidate="novalidate" action="" method="post" role="form">
         <section class="page-section" id="contact">
             <div class="container">
                 <!-- Contact Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">{{ _('Commander') }}</h2>
+                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">{{ _('Etape 2 : Personnaliser') }}</h2>
                 <!-- Icon Divider-->
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
@@ -103,8 +104,8 @@
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
                         <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19.-->
-                        <form id="contactForm" name="sentMessage" novalidate="novalidate" action="" method="post" role="form">
-                            {{ form.hidden_tag() }}
+                        <!--<form id="contactForm" name="sentMessage" novalidate="novalidate" action="" method="post" role="form">-->
+                        <!--{{ form.hidden_tag() }}-->
                             <div class="control-group">
                                 <div class="form-group floating-label-form-group controls mb-0 pb-2">
                                     <label>{{ _("Prénom de l'enfant") }}</label><input class="form-control" id="nickname" type="text" 
@@ -134,6 +135,102 @@
                                     <label>{{ _("Message à l'ouverture du livre") }}</label><textarea class="form-control" id="body" rows="5" 
                                         placeholder="Message (par exemple, 'A ma chère Anna, bonne lecture!')"
                                         name="body" required="required" data-validation-required-message="Please enter a message."></textarea>
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                            <br />
+                            <!--<div id="success"></div>-->
+                            <!--<div class="form-group"><button class="btn btn-primary btn-xl" id="sendMessageButton" type="submit">{{ _('Commander') }}</button></div>-->
+                            <!--</form>-->
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="page-section" id="buyer_info">
+            <div class="container">
+                <!-- Contact Section Heading-->
+                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">{{ _('Etape 3 : Commander') }}</h2>
+                <!-- Icon Divider-->
+                <div class="divider-custom">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-line"></div>
+                </div>
+                <!-- Contact Section Form-->
+                <div class="row">
+                    <div class="col-lg-8 mx-auto">
+                        <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19.-->
+                        <!--<form id="contactForm" name="sentMessage" novalidate="novalidate" action="" method="post" role="form">-->
+                        <!--{{ form.hidden_tag() }}-->
+                            <div class="control-group">
+                                <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                                    <label>{{ _("Prénom") }}</label><input class="form-control" id="first_name" type="text" 
+                                    placeholder="Prénom" 
+                                    name="first_name" required="required" data-validation-required-message="Please enter your name." />
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                            <div class="control-group">
+                                <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                                    <label>{{ _('Nom de famille') }}</label><input class="form-control" id="last_name" type="text"
+                                    placeholder="Nom de famille"
+                                    name="last_name" required="required" data-validation-required-message="Please enter your name." />
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                            <div class="control-group">
+                                <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                                    <label>{{ _("Adresse email") }}</label><input class="form-control" id="email" type="text" 
+                                    placeholder="Adresse email" 
+                                    name="email" required="required" data-validation-required-message="Please enter your name." />
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                            <div class="control-group">
+                                <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                                    <label>{{ _("Adresse Ligne 1 (rue, numéro)") }}</label><input class="form-control" id="address_1" type="text" 
+                                    placeholder="Adresse Ligne 1 (rue, numéro)" 
+                                    name="address_1" required="required" data-validation-required-message="Please enter your name." />
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                            <div class="control-group">
+                                <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                                    <label>{{ _("Adresse Ligne 2 (appartement, étage, ...)") }}</label><input class="form-control" id="address_2" type="text" 
+                                    placeholder="Adresse Ligne 2 (appartement, étage, ...)"
+                                    name="address_2" required="required" data-validation-required-message="Please enter your name." />
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                            <div class="control-group">
+                                <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                                    <label>{{ _("Ville") }}</label><input class="form-control" id="city" type="text" 
+                                    placeholder="Ville"
+                                    name="city" required="required" data-validation-required-message="Please enter your name." />
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                            <div class="control-group">
+                                <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                                    <label>{{ _("Pays") }}</label><input class="form-control" id="country" type="text" 
+                                    placeholder="Pays"
+                                    name="country" required="required" data-validation-required-message="Please enter your name." />
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                            <div class="control-group">
+                                <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                                    <label>{{ _("Code postal") }}</label><input class="form-control" id="postal_code" type="text" 
+                                    placeholder="Code postal"
+                                    name="postal_code" required="required" data-validation-required-message="Please enter your name." />
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                            <div class="control-group">
+                                <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                                    <label>{{ _("Province/etat") }}</label><input class="form-control" id="state" type="text" 
+                                    placeholder="Province/etat"
+                                    name="state" required="required" data-validation-required-message="Please enter your name." />
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
