add parsing story step

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -124,9 +124,41 @@
                             </div>
                             <div class="control-group">
                                 <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                                    <label>{{ _("Prénom d'un ami/d'une amie") }}</label><input class="form-control" id="friend" type="text" 
+                                    placeholder="Prénom d'un ami/d'une amie"
+                                    name="friend" required="required" data-validation-required-message="Please enter your name." />
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                            <div class="control-group">
+                                <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                                    <label>{{ _('fille/garçon') }}</label><input class="form-control" id="friend_gender" type="text"
+                                    placeholder="Fille/Garçon (par exemple, 'Garçon')" 
+                                    name="friend_gender" required="required" data-validation-required-message="Please enter your name." />
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                            <div class="control-group">
+                                <div class="form-group floating-label-form-group controls mb-0 pb-2">
                                     <label>{{ _("Lieu où l'histoire se déroule") }}</label><input class="form-control" id="location" type="text" 
                                     placeholder="Lieu où l'histoire se déroule (par exemple, 'Dinant')" 
                                     name="location" required="required" data-validation-required-message="Please enter your name." />
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                            <div class="control-group">
+                                <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                                    <label>{{ _("Nom du chien")}}</label><input class="form-control" id="dog" type="text" 
+                                    placeholder="Lieu où l'histoire se déroule (par exemple, 'Dinant')" 
+                                    name="dog" required="required" data-validation-required-message="Please enter your name." />
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                            <div class="control-group">
+                                <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                                    <label>{{ _("Nom du dessert préféré") }}</label><input class="form-control" id="cake" type="text" 
+                                    placeholder="Lieu où l'histoire se déroule (par exemple, 'Dinant')" 
+                                    name="cake" required="required" data-validation-required-message="Please enter your name." />
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
