prepare to link frontend to parsing

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -149,7 +149,7 @@
                             <div class="control-group">
                                 <div class="form-group floating-label-form-group controls mb-0 pb-2">
                                     <label>{{ _("Nom du chien")}}</label><input class="form-control" id="dog" type="text" 
-                                    placeholder="Lieu où l'histoire se déroule (par exemple, 'Dinant')" 
+                                    placeholder="Nom du chien"
                                     name="dog" required="required" data-validation-required-message="Please enter your name." />
                                     <p class="help-block text-danger"></p>
                                 </div>
@@ -157,8 +157,16 @@
                             <div class="control-group">
                                 <div class="form-group floating-label-form-group controls mb-0 pb-2">
                                     <label>{{ _("Nom du dessert préféré") }}</label><input class="form-control" id="cake" type="text" 
-                                    placeholder="Lieu où l'histoire se déroule (par exemple, 'Dinant')" 
+                                    placeholder="Nom du dessert préféré"
                                     name="cake" required="required" data-validation-required-message="Please enter your name." />
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                            <div class="control-group">
+                                <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                                    <label>{{ _("Un/une [dessert]") }}</label><input class="form-control" id="cake_gender" type="text" 
+                                    placeholder="Un/une [dessert]"
+                                    name="cake-gender" required="required" data-validation-required-message="Please enter your name." />
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
