close connection from db to pdf multi-page

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -116,9 +116,9 @@
                             </div>
                             <div class="control-group">
                                 <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                                    <label>{{ _('fille/garçon') }}</label><input class="form-control" id="gender" type="text"
+                                    <label>{{ _('fille/garçon') }}</label><input class="form-control" id="nickname_gender" type="text"
                                     placeholder="Fille/Garçon (par exemple, 'Garçon')" 
-                                    name="gender" required="required" data-validation-required-message="Please enter your name." />
+                                    name="nickname_gender" required="required" data-validation-required-message="Please enter your name." />
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
@@ -166,7 +166,7 @@
                                 <div class="form-group floating-label-form-group controls mb-0 pb-2">
                                     <label>{{ _("Un/une [dessert]") }}</label><input class="form-control" id="cake_gender" type="text" 
                                     placeholder="Un/une [dessert]"
-                                    name="cake-gender" required="required" data-validation-required-message="Please enter your name." />
+                                    name="cake_gender" required="required" data-validation-required-message="Please enter your name." />
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
